--- a/code/ps_7.Rmd
+++ b/code/ps_7.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Visualizations of Outreach Effect in Kenyan ELections"
+title: "Visualizations of Outreach Effect in Kenyan Elections"
 author: "Nosa Lawani"
 date: "4/7/2021"
 output:
